# blog

./: .gitmodules  README.md  config.toml  pelicanconf.py  publishconf.py  pyproject.toml
content/: about.md
content/analysis/: rotten_tomatoes_reviews.ipynb
content/essay/: getting_ideas.md  house_of_the_future.md  human_resource_management.md  tenants_and_landlords.md  why_i_started_a_startup.md
content/posts/: why-i-started-a-startup.md
content/study/: fluent_python.ipynb  hands_on_machine_learning.ipynb  think_stats.ipynb
