[tool.poetry]
name = "blog"
version = "0.0.1"
description = "My blog"
authors = ["RobinRheem <robin.rheem@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.2"
Markdown = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
