[tool.poetry]
name = "blog"
version = "0.0.1"
description = "My blog"
authors = ["RobinRheem <robin.rheem@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.2"
Markdown = "^3.1"
jupyter = "^1.0"
pandas = "^0.25.3"
numpy = "^1.17"
scipy = "^1.3"
statsmodels = "^0.10.2"
matplotlib = "^3.1"
scikit-learn = "^0.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
